# master-programming-task

lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_proxy
lab3/include/: proxy.hpp
lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_iterator
lab4/include/: iterator.hpp
lab4/tests/: iterator.cpp
lab5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_variant
lab5/include/: variant.hpp
lab5/tests/: variant.cpp
lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_json_parser
lab6/include/: json.hpp
lab6/parser_helper/: CMakeLists.txt  Makefile  cmake_install.cmake  tests_parser_helper
lab6/parser_helper/include/: quoted_string.hpp  variant_decorator.hpp
lab6/parser_helper/tests/: quoted_string.cpp  variant_decorator.cpp
lab6/tests/: json.cpp
lab7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_type_map
lab7/include/: type_map.hpp
lab8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_strided_range
lab8/tests/: strided_range.cpp
